# ai-audio-gateway

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
business/: grpc_server.py  guardrails.py  server.py  thinker.py
business/agents/: base.py  responder_thinker.py  single_agent.py
business/domain/: cafe.py
business/tools/: base.py  cafe_tools.py
gateway/: app.py  grpc_business_client.py  rtc.py  server.py  session.py
gateway/audio/: convert.py  interrupt.py  vad.py
gateway/realtime/: mock_backend.py  openai_backend.py  protocol.py
harness/browser/: app.js  index.html
harness/certs/: .gitignore  gen_certs.sh
proto_contract/: auth.py  channel.py  env.py  envelopes.py  timeline.py
tests/: test_agent_init_failure.py  test_barge_in_tail.py  test_endpointing_authority.py  test_full_stack.py  test_guardrails.py  test_mtls.py  test_proxy_relay.py  test_realtime_config.py  test_thinker_backend.py  test_timeline.py  test_tool_context.py  test_turn_staleness.py  test_vad.py
